# cusflow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: .gitkeep
docs/: ML_CONCEPTS.md  architecture.md  hotel_recommendation_guide.md  quick_reference.md  technical_guide.md
metarank/: config.yml
models/: .gitkeep
notebooks/: exploration.ipynb
reports/: .gitkeep
scripts/: demo_api.py  demo_expedia.py  evaluate.py  load_features.py  run_ab_sim.py  train_model.py
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  app.py  personalization_routes.py  routes.py
src/candidate_generation/: __init__.py  ann_retriever.py
src/data/: __init__.py  expedia_generator.py  loaders.py  schemas.py
src/evaluation/: __init__.py  ab_simulation.py  ablation.py  metrics.py
src/genai/: __init__.py  embeddings.py  summarizer.py
src/personalization/: __init__.py  bandits.py
src/pricing/: __init__.py  dynamic_pricing.py
src/ranking/: __init__.py  bias_correction.py  feature_engineering.py  lambdamart.py
src/search/: __init__.py  relevance.py
src/store/: __init__.py  redis_store.py
tests/: __init__.py  test_ranking.py
